Fix event name in metrics for non-touch events

When touch start is prevented before this patch
the code was mistakenly considered all the events
including non-touch events as DefaultPrevented.

Bug: 717017
Change-Id: I0928ddb184a79b95c3502cb3a9f4f4f1b4fed267
Reviewed-on: https://chromium-review.googlesource.com/705280
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Navid Zolghadr <nzolghadr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507993}
Former-commit-id: 40ed50386c66eeb21c65bad6225435910e00686c